// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-resource-visualizer - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Analyze Azure resource groups and generate architecture diagrams as Mermaid or Draw.io. Supports live Azure resource discovery, sketch/description-to-diagram conversion, and detailed relationship mapping. WHEN: create architecture diagram, visualize Azure resources, show resource relationships, generate Mermaid diagram, analyze resource group, diagram my resources, architecture visualization, resource topology, map Azure infrastructure, draw.io diagram, sketch to diagram, convert sketch to architecture, generate draw.io, create draw.io from azure. DO NOT USE FOR: comparing diagrams against live Azure or Bicep (use azure-infrastructure-sync), generating Bicep templates (use azure-iac-generator).",
  "extractedKeywords": [
    "against",
    "aks",
    "analyze",
    "architecture",
    "authentication",
    "azure",
    "azure-iac-generator",
    "azure-infrastructure-sync",
    "bicep",
    "cli",
    "comparing",
    "conversion",
    "convert",
    "create",
    "description-to-diagram",
    "detailed",
    "diagram",
    "diagrams",
    "discovery",
    "draw",
    "from",
    "function",
    "generate",
    "generating",
    "group",
    "groups",
    "identity",
    "infrastructure",
    "key vault",
    "live",
    "mapping",
    "mcp",
    "mermaid",
    "monitor",
    "rbac",
    "relationship",
    "relationships",
    "resource",
    "resources",
    "security",
    "show",
    "sketch",
    "sql",
    "storage",
    "supports",
    "templates",
    "topology",
    "visualization",
    "visualize",
    "visualizer",
    "when",
  ],
  "name": "azure-resource-visualizer",
}
`;

exports[`azure-resource-visualizer - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "against",
  "aks",
  "analyze",
  "architecture",
  "authentication",
  "azure",
  "azure-iac-generator",
  "azure-infrastructure-sync",
  "bicep",
  "cli",
  "comparing",
  "conversion",
  "convert",
  "create",
  "description-to-diagram",
  "detailed",
  "diagram",
  "diagrams",
  "discovery",
  "draw",
  "from",
  "function",
  "generate",
  "generating",
  "group",
  "groups",
  "identity",
  "infrastructure",
  "key vault",
  "live",
  "mapping",
  "mcp",
  "mermaid",
  "monitor",
  "rbac",
  "relationship",
  "relationships",
  "resource",
  "resources",
  "security",
  "show",
  "sketch",
  "sql",
  "storage",
  "supports",
  "templates",
  "topology",
  "visualization",
  "visualize",
  "visualizer",
  "when",
]
`;
